--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.10.0'
     implementation  'com.google.code.gson:gson:2.8.5'
+    implementation 'io.github.h07000223:flycoTabLayout:3.0.0'
 
 }
