--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.10.0'
     implementation  'com.google.code.gson:gson:2.8.5'
     implementation 'io.github.h07000223:flycoTabLayout:3.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
 }
